tests/analyze/builtin-no-annotation/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: `built-in` requires a type annotation on the enclosing `def` (`def name :: <type> = built-in "tag"`).
> 1 | def length = built-in "list-length"
                   ^^^^^^^^^^^^^^^^^^^^^^

